# nix-config

./: .dir-locals.el  .gitignore  LICENSE  configuration.nix  docker.nix  flake.nix  hardware-configuration.nix  justfile  users.nix  virtualbox.nix
archive/: configuration.nix
archive/host/: tpad.nix
home/: .gitignore  .gitmodules  Xresources  bashrc  core.nix  default.nix  dev.nix  emacs.nix  flake.nix  fonts.nix  ghci  git.nix  gitconfig  gitexclude  gtkrc-2.0  haskeline  haskell.nix  hlint.yaml  inputrc  install.sh  irbrc  jujutsu.nix  justfile  link.sh  nix.nix  nushell.nix  package.nix  pryrc  rust.nix  rvmrc  screenrc  shell.nix  stylish-haskell.yaml  terminal.nix  tmux.conf  typst.nix  utils.nix  vimrc  vscode.nix  xmonad.nix  (+2 more)
home/bash.d/: Darwin  aliases
home/config/: fourmolu.yaml  shellcheckrc
home/config/alacritty/: alacritty.yml
home/config/brittany/: config.yaml
home/config/fontconfig/: fonts.conf
home/config/xmonad/: Build.hs  default.nix  hie.yaml  package.yaml  shell.nix  xmonad-config.cabal  xmonad.hs
home/emacs.d/: custom.el  init.el
home/nixpkgs/: config.nix
home/scripts/: init  link  switch
home/xmonad/: .gitignore  default.nix  package.yaml  shell.nix  stack.yaml  xmonad-config.cabal  xmonad.hs
home/zsh/: general  haskell  ruby
host/: tpad.nix  vbox.nix
hosts/: moon.nix  vbox.nix  wsl.nix
hosts/vbox/: hardware-configuration.nix
modules/: base.nix  default.nix  home-manager.nix
modules/darwin/: default.nix
modules/linux/: default.nix  desktop.nix  minimal.nix
nix/: merriam-webster-1913.nix
users/: cyd.nix
(+72 files in other folders)
