cabal-version: 2.4

name: xmonad-config
version: 0.0.0

executable xmonad-config
  main-is: src/Main.hs
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns
  build-depends:
    , base
    , shake
    , xmonad
    , xmonad-contrib
    , xmonad-extras
  if os(darwin)
    include-dirs:
      /usr/X11/include
    extra-lib-dirs:
      /usr/X11/lib
  default-language: Haskell2010
